Updated About page label

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
   <body>
     {{> header}}
     <!--<h1>{{pageTitle}}</h1>-->
-    <p>Some text here</p>
+    <p>About me.</p>
     <!--<footer>
       <p>Copyright {{currentYear}}</p>
     </footer>-->
